# deploy-opencode

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  deploy.sh  skills.manifest.json  tasks.json
claude/skills/find-rings/tool/: env.sh  pyproject.toml
claude/skills/nano-isaac/tool/: env.sh  pyproject.toml
docs/: apptainer-sandbox-deployment.md  build-tools-not-agents-executive.md  build-tools-not-agents.md  deploying-nano-isaac.md  essay-it-is-not-about-ai.md  incident-elog-copilot-backfill-2026-02-10.md  incident-permissions-fix-2026-02-12.md  migration-confluence-doc.md  migration-daq-logs.md  migration-elog-copilot.md  migration-lcls-catalog.md  migration-smartsheet.md  notes.md  permissions-ps-users-migration-2026-04-23.md  s3df-slurm-research.md  self-serve-confluence-doc.md  self-serve-elog-copilot.md  setup.md
handoff/: handoff-externalize-skills-2026-05-13.md  phase4-rename-commands.md  skill-audit-2026-05-13.md  skill-externalize-guide.md
opencode/: opencode.json
opencode/agents/: ask-ami  ask-lcls2  ask-s3df  ask-slurm-s3df  ask-smalldata  askcode  confluence-doc.md  cuda-docs  daq-logs.md  docs-search  elog-copilot.md  experimental-elog-copilot-postgres.md  experimental-hutch-python  find-rings  index-code  lcls-catalog  nano-isaac  smartsheet.md
opencode/commands/: align.md  approval.md  be-concise.md  breakdown.md  clarify-before-research.md  clarify.md  formalize-plan-delegated.md  gaps.md  (+3 more)
proxy/: README.md  env.sh  nginx.conf.template  proxy.py  start-proxy.sh  stop-proxy.sh
sandbox/: README.md  build.sh  deploy.sh  opencode-sandbox.def
(+58 files in other folders)
