[project]
name = "find-rings"
version = "0.3.0"
description = "Diffraction ring detection for X-ray detector images"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "Pillow",
    "scipy",
    "matplotlib",
    "lmfit",
    "spatial-calib-xray",
]

[tool.uv.sources]
spatial-calib-xray = { git = "https://github.com/carbonscott/spatial-calib-xray.git" }
